can view post detail

--- a/app/src/main/res/layout/activity_recommendation_board.xml
+++ b/app/src/main/res/layout/activity_recommendation_board.xml
@@ -41,7 +41,7 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_margin="5dp"
         android:scaleType="fitCenter"
@@ -71,6 +71,18 @@
             android:text="0"
             android:textColor="@color/white"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:textAlignment="textEnd"
+            android:layout_marginRight="20dp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
