--- a/app/src/main/res/layout/activity_constellation.xml
+++ b/app/src/main/res/layout/activity_constellation.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/cs_d_img"
-        android:src="@drawable/cs11"
+        android:src="@drawable/c11"
         android:layout_below="@id/cs_name"
         />
 
