선유교, 둥둥섬, 서울로 위치 변경, 별 이미지 변경

--- a/app/src/main/res/layout/activity_recommendation_menu.xml
+++ b/app/src/main/res/layout/activity_recommendation_menu.xml
@@ -48,45 +48,49 @@
             android:id="@+id/banpo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="1dp"
-            android:layout_marginStart="1dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintStart_toStartOf="@+id/namsan"
-            app:layout_constraintTop_toBottomOf="@+id/seoullo"
+            app:layout_constraintBottom_toBottomOf="@+id/dungdung"
+            app:layout_constraintEnd_toEndOf="@+id/dungdung"
+            app:layout_constraintStart_toEndOf="@+id/dungdung"
             app:srcCompat="@drawable/bluestar" />
 
         <ImageButton
             android:id="@+id/sukchon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginEnd="86dp"
+            android:layout_marginRight="86dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintEnd_toEndOf="@+id/olympic"
-            app:layout_constraintTop_toTopOf="@+id/ungbong"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/dungdung"
+            app:layout_constraintTop_toBottomOf="@+id/namsan"
             app:srcCompat="@drawable/bluestar" />
 
         <ImageButton
             android:id="@+id/noeul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="21dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginRight="9dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintBottom_toBottomOf="@+id/sunyu"
-            app:layout_constraintEnd_toStartOf="@+id/sunyu"
-            app:layout_constraintStart_toStartOf="@+id/sunyu"
+            app:layout_constraintBottom_toTopOf="@+id/building63"
+            app:layout_constraintEnd_toStartOf="@+id/building63"
             app:srcCompat="@drawable/bluestar" />
 
         <ImageButton
             android:id="@+id/olympic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="54dp"
-            android:layout_marginRight="54dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="0dp"
+            android:layout_height="37dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="65dp"
+            android:layout_marginRight="65dp"
+            android:layout_marginTop="23dp"
             android:background="@drawable/bluestar"
+            app:layout_constraintBottom_toBottomOf="@+id/sukchon"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ungbong"
             app:layout_constraintTop_toTopOf="@+id/ungbong"
             app:srcCompat="@drawable/bluestar" />
 
@@ -94,11 +98,11 @@
             android:id="@+id/naksan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="27dp"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="22dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintStart_toStartOf="@+id/bukak"
+            app:layout_constraintStart_toEndOf="@+id/kyeongbok"
             app:layout_constraintTop_toTopOf="@+id/bukak"
             app:srcCompat="@drawable/bluestar" />
 
@@ -106,21 +110,23 @@
             android:id="@+id/ungbong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginRight="18dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintEnd_toStartOf="@+id/sukchon"
-            app:layout_constraintTop_toTopOf="@+id/namsan"
+            app:layout_constraintBottom_toTopOf="@+id/sukchon"
+            app:layout_constraintEnd_toStartOf="@+id/olympic"
+            app:layout_constraintStart_toEndOf="@+id/namsan"
             app:srcCompat="@drawable/bluestar" />
 
         <ImageButton
             android:id="@+id/bukak"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="26dp"
-            android:layout_marginRight="26dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
             android:layout_marginTop="81dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintEnd_toEndOf="@+id/namsan"
+            app:layout_constraintStart_toStartOf="@+id/kyeongbok"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/bluestar" />
 
@@ -128,20 +134,31 @@
             android:id="@+id/namsan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginLeft="212dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginStart="212dp"
             android:background="@drawable/bluestar"
             app:layout_constraintEnd_toStartOf="@+id/ungbong"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/seoullo"
             app:srcCompat="@drawable/bluestar" />
 
         <ImageButton
             android:id="@+id/dungdung"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginRight="49dp"
+            android:layout_marginStart="200dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintEnd_toStartOf="@+id/banpo"
-            app:layout_constraintStart_toStartOf="@+id/banpo"
-            app:layout_constraintTop_toTopOf="@+id/banpo"
+            app:layout_constraintBottom_toBottomOf="@+id/sukchon"
+            app:layout_constraintEnd_toStartOf="@+id/sukchon"
+            app:layout_constraintStart_toEndOf="@+id/sunyu"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seoullo"
             app:srcCompat="@drawable/bluestar" />
 
         <ImageButton
@@ -149,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bluestar"
-            app:layout_constraintStart_toStartOf="@+id/bukak"
+            app:layout_constraintStart_toStartOf="@+id/seoullo"
             app:layout_constraintTop_toBottomOf="@+id/bukak"
             app:srcCompat="@drawable/bluestar" />
 
@@ -157,8 +174,10 @@
             android:id="@+id/seoullo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintStart_toStartOf="@+id/kyeongbok"
+            app:layout_constraintEnd_toStartOf="@+id/banpo"
             app:layout_constraintTop_toBottomOf="@+id/kyeongbok"
             app:srcCompat="@drawable/bluestar" />
 
@@ -166,10 +185,14 @@
             android:id="@+id/sunyu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginLeft="129dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginStart="129dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintEnd_toStartOf="@+id/seoullo"
+            app:layout_constraintEnd_toStartOf="@+id/dungdung"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/seoullo"
             app:srcCompat="@drawable/bluestar" />
 
@@ -177,15 +200,15 @@
             android:id="@+id/building63"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="13dp"
-            android:layout_marginLeft="230dp"
-            android:layout_marginRight="13dp"
-            android:layout_marginStart="230dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="26dp"
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="26dp"
+            android:layout_marginStart="22dp"
             android:background="@drawable/bluestar"
-            app:layout_constraintEnd_toStartOf="@+id/dungdung"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/seoullo"
+            app:layout_constraintBottom_toBottomOf="@+id/dungdung"
+            app:layout_constraintEnd_toEndOf="@+id/seoullo"
+            app:layout_constraintStart_toStartOf="@+id/sunyu"
             app:srcCompat="@drawable/bluestar" />
 
     </android.support.constraint.ConstraintLayout>
