--- a/app/src/main/res/layout/activity_recommendation_board.xml
+++ b/app/src/main/res/layout/activity_recommendation_board.xml
@@ -25,7 +25,8 @@
             android:layout_gravity="center_horizontal"
             android:text=""
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:fontFamily="@font/seoulhangang"/>
 
         <ImageView
             android:id="@+id/share_btn"
@@ -57,6 +58,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
             android:padding="5dp"
             android:scaleType="fitStart"
             android:src="@drawable/moon_empty" />
@@ -70,7 +72,8 @@
             android:padding="6dp"
             android:text="0"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:fontFamily="@font/seoulhangang"/>
 
         <TextView
             android:id="@+id/userName"
@@ -81,7 +84,8 @@
             android:layout_marginRight="20dp"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:fontFamily="@font/seoulhangang"/>
 
     </LinearLayout>
 
@@ -95,22 +99,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_margin="4dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:text=""
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:fontFamily="@font/seoulhangang"/>
 
         <TextView
             android:id="@+id/region_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
             android:layout_marginLeft="10dp"
             android:text=""
             android:textColor="@color/white"
             android:textColorHighlight="#88ffffff"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:fontFamily="@font/seoulhangang"/>
 
         <TextView
             android:id="@+id/filter"
@@ -120,7 +124,8 @@
             android:layout_marginLeft="10dp"
             android:text=""
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:fontFamily="@font/seoulhangang"/>
 
         <ScrollView
             android:id="@+id/scrollView"
@@ -133,12 +138,12 @@
                 android:id="@+id/explanation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:layout_marginRight="10dp"
+                android:layout_margin="10dp"
                 android:text=""
                 android:textColor="@color/white"
-                android:lineSpacingExtra="5dp"
-                android:textSize="16sp" />
+                android:lineSpacingExtra="7dp"
+                android:textSize="16sp"
+                android:fontFamily="@font/seoulhangang"/>
         </ScrollView>
 
     </LinearLayout>
