어제의 서울 야매버전

--- a/app/src/main/res/layout/activity_intro2.xml
+++ b/app/src/main/res/layout/activity_intro2.xml
@@ -25,7 +25,9 @@
         android:id="@+id/iv_best"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:background="@drawable/loading"
+        />
 
     <TextView
         android:layout_centerHorizontal="true"
