--- a/app/src/main/res/layout/activity_intro2.xml
+++ b/app/src/main/res/layout/activity_intro2.xml
@@ -37,7 +37,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/seoulhangang"
         android:text="화면을 클릭하세요"
-        android:textColor="#ffffff" />
+        android:textSize="20dp"
+        android:textColor="#88ffffff" />
 
 
 
